--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
             <img src="images/home_image.png" alt="road Safety" class="w-full max-w-2xl p-2 shadow-md shadow-[--bg-color] bg-[--bg-color] rounded-lg" />
             <div class="flex justify-center flex-col items-center gap-4 w-full mt-12 md:mt-7 md:flex-row lg:w-[63%] md:w-[80%] lg:gap-8 text-center">
               <a href="6NN.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] lg:w-full h-[80px] hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
-                Six Non-Negotiables
+                6 Non-Negotiables
               </a>
   
               <a href="stop5.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] h-[80px] lg:w-full hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
