--- a/ppe.html
+++ b/ppe.html
@@ -1,47 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <title>PPEs for Shop Floor</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <title>Six Non-Negotiables</title>
     <script src="https://cdn.tailwindcss.com"></script>
+  </head>
 
-</head>
+  <body class="bg-[--bg-color] h-screen overflow-hidden">
+    <div class="h-screen overflow-auto">
+      <section
+        class="flex flex-col items-center m-5 bg-[--blue-color] rounded-lg lg:mx-auto pb-3 md:pb-5 lg:w-[90%]"
+      >
+        <div
+          class="bg-[--text-color] text-[--btn-text] font-bold text-2xl text-center w-[95%] my-5 rounded-lg lg:text-3xl lg:w-[90%]"
+        >
+          <h1 class="py-3 border-b border-[--btn-text] inline-block">
+            Madaitotry PPEs for Shop Floor</h1>
+          </h1>
+          <h1 class="pb-3 pt-3">व्यक्तिगत सुरक्षा उपकरण</h1>
+        </div>
+        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[50%]">
+          <a
+            href="pdf/Safety_Instruction.pdf"
+            download="Safety_Instruction.pdf"
+            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full"
+          >
+            <img src="images/2.jpg" alt="Hard_Work" class="rounded w-full " />
+          </a>
+        </div>
+      </section>
+      <section class="w-full text-center mb-[18%] lg:mb-[2%]">
+        <a href="home.html">
+          <button
+            class="bg-[--blue-color] p-3 text-[--btn-text] font-medium rounded-2xl px-14 hover:bg-[--skyBlue] hover:text-[--black] hover:font-semibold transition duration-300 ease-in-out lg:px-28 lg:text-lg shadow-sm hover:shadow-[--black]"
+          >
+            Go Back
+          </button>
+        </a>
+      </section>
 
-<body class="bg-[--bg-color] h-screen overflow-hidden">
-    <div class='overflow-auto h-screen'>
-        <section
-            class='flex flex-col items-center m-5 mg:gap-y-10 lg:gap-y-10 bg-[--blue-color] rounded-lg sm:gap-y-3 lg:mx-auto pb-1 lg:my-6 md:pb-24 lg:w-[80%]'>
-            <div
-                class='bg-[--text-color] text-[--btn-text] font-bold text-3xl text-center w-[95%] my-5 rounded-lg lg:text-5xl lg:w-[80%]'>
-                <h1 class='py-3 border-b border-[--btn-text] inline-block'>Madaitotry PPEs for Shop Floor</h1>
-                <h1 class='pb-3 pt-3'>व्यक्तिगत सुरक्षा उपकरण</h1>
-            </div>
-            <div class='grid gap-4 place-items-center pb-4 text-[--btn-text]'>
-                <a href="pdf/Safety_Instruction.pdf" download="Safety_Instruction.pdf" class='w-[90%] lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-[95%]'>
-                    <img src='images/2.jpg' alt="Hard_Work" class='rounded w-72 h-52' />
-                    <button class='w-full text-center bg-[--text-color] p-1 rounded-sm font-extrabold cursor-pointer hover:bg-[--slate-500] transition duration-300 ease-in-out'>Madaitotry PPEs for Shop Floor</button>
-                </a>
-            </div>
-        </section>
-        <section class='w-full text-center mb-[20%] md:mb-[10%] lg:mb-[5%] overflow-hidden'>
-            <a href="home.html">
-                <button
-                    class='bg-[--blue-color] p-3 text-[--btn-text] font-medium rounded-2xl px-14 hover:bg-[--skyBlue] hover:text-[--black] hover:font-semibold transition duration-300 ease-in-out lg:px-28 lg:text-lg shadow-sm hover:shadow-[--black]'>Go
-                    Back</button>
-            </a>
-
-        </section>
-
-        <section class="absolute bottom-0 w-full bg-[--black] p-4">
-            <footer class="text-center text-sm md:text-lg font-extralight text-[--btn-text]">
-                Copyright © 2024. All rights reserved.
-            </footer>
-        </section>
+      <section class="absolute lg:relative bottom-0 w-full bg-[--black] p-4">
+        <footer
+          class="text-center text-sm md:text-lg font-extralight text-[--btn-text]"
+        >
+          Copyright © 2024. All rights reserved.
+        </footer>
+      </section>
     </div>
-</body>
-
+  </body>
 </html>
