--- a/6NN.html
+++ b/6NN.html
@@ -22,13 +22,13 @@
           </h1>
           <h1 class="pb-3 pt-3">छह गैर परक्राम्य</h1>
         </div>
-        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[90%]">
+        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[80%] h-[80%]">
           <a
             href="pdf/6NN.pdf"
             download="6NN.pdf"
-            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full"
+            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full max-h-screen"
           >
-            <img src="images/0.jpg" alt="Hard_Work" class="rounded w-full " />
+            <img src="images/6nn.jpg" alt="Hard_Work" class="rounded w-full h-[30vh] lg:h-[52vh]" />
           </a>
         </div>
       </section>
@@ -42,7 +42,7 @@
         </a>
       </section>
 
-      <section class="absolute md:relative lg:relative bottom-0 w-full bg-[--black] p-4">
+      <section class="absolute bottom-0 w-full bg-[--black] p-4">
         <footer
           class="text-center text-sm md:text-lg font-extralight text-[--btn-text]"
         >
