--- a/home.html
+++ b/home.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body class="h-screen overflow-hidden">
-    <div class="h-screen relative overflow-auto">
+<body class="h-screen overflow-hidden" >
+    <div class="h-screen relative overflow-auto bg-cover bg-center bg-no-repeat bg-opacity-[5%]" style="background-image: url('images/Logo\ Line.jpg');" >
         <section class="w-full flex flex-col justify-center items-center gap-6">
           <div class="flex justify-center items-center w-[95%] flex-col lg:relative md:flex-row md:relative lg:flex-row border-[--blue-color] border-b">
-            <img src="images/android-chrome-192x192.png" alt="Logo" class="h-10 w-10 lg:absolute lg:left-0 md:absolute md:left-0 lg:h-[4rem] lg:w-[4rem] lg:border-none md:border-none mt-2 lg:mt-0 md:mt-0">
+            <img src="images/Logo.png" alt="Logo" class="h-10 w-10 lg:absolute lg:left-0 md:absolute md:left-0 lg:h-16 lg:w-16 lg:border-none md:border-none mt-2 lg:mt-0 md:mt-0">
             <h1 class="my-6 mb-3 text-center font-bold text-3xl  text-[--blue-color] md:text-[2.3rem] lg:text-[2.9rem] py-3">
               QR Code CES-DEL
             </h1>
