--- a/stop5.html
+++ b/stop5.html
@@ -22,13 +22,13 @@
           </h1>
           <h1 class="pb-3 pt-3">स्टॉप-5</h1>
         </div>
-        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[50%]">
+        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[60%]">
           <a
             href="pdf/STOP_5.pdf"
             download="STOP_5.pdf"
             class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full"
           >
-            <img src="images/1.jpg" alt="Hard_Work" class="rounded w-full " />
+            <img src="images/Stop 5.jpg" alt="Hard_Work" class="rounded w-full " />
           </a>
         </div>
       </section>
@@ -42,7 +42,7 @@
         </a>
       </section>
 
-      <section class="absolute bottom-0 lg:relative w-full bg-[--black] p-4">
+      <section class="absolute bottom-0 w-full bg-[--black] p-4">
         <footer
           class="text-center text-sm md:text-lg font-extralight text-[--btn-text]"
         >
