--- a/generalSafety.html
+++ b/generalSafety.html
@@ -10,7 +10,7 @@
 
 </head>
 <body class="bg-[--bg-color] h-screen overflow-hidden">
-    <div class='overflow-auto h-screen'> 
+    <div class='h-screen overflow-auto'> 
         <section class='flex flex-col items-center m-5 gap-y-10 bg-[--blue-color] rounded-lg lg:mx-auto lg:my-6 pb-5 md:pb-24 lg:w-[80%]'>
             <div class='bg-[--text-color] text-[--btn-text] font-bold text-2xl text-center w-[95%] my-5 rounded-lg lg:text-3xl lg:w-[80%]'>
                 <h1 class='py-3 border-b border-[--btn-text] inline-block'>General Safety Rules</h1>
