--- a/ppe.html
+++ b/ppe.html
@@ -22,17 +22,17 @@
           </h1>
           <h1 class="pb-3 pt-3">व्यक्तिगत सुरक्षा उपकरण</h1>
         </div>
-        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[50%]">
+        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[80%] h-[80%]">
           <a
             href="pdf/Safety_Instruction.pdf"
             download="Safety_Instruction.pdf"
-            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full"
+            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full max-h-screen"
           >
-            <img src="images/2.jpg" alt="Hard_Work" class="rounded w-full " />
+            <img src="images/For Websit data.JPG" alt="Hard_Work" class="rounded w-full h-[30vh] lg:h-[52vh]" />
           </a>
         </div>
       </section>
-      <section class="w-full text-center mb-[18%] lg:mb-[2%]">
+      <section class="w-full text-center mb-[15%] lg:mb-[2%]">
         <a href="home.html">
           <button
             class="bg-[--blue-color] p-3 text-[--btn-text] font-medium rounded-2xl px-14 hover:bg-[--skyBlue] hover:text-[--black] hover:font-semibold transition duration-300 ease-in-out lg:px-28 lg:text-lg shadow-sm hover:shadow-[--black]"
@@ -42,7 +42,7 @@
         </a>
       </section>
 
-      <section class="absolute lg:relative bottom-0 w-full bg-[--black] p-4">
+      <section class="absolute bottom-0 w-full bg-[--black] p-4">
         <footer
           class="text-center text-sm md:text-lg font-extralight text-[--btn-text]"
         >
