--- a/stop5.html
+++ b/stop5.html
@@ -28,7 +28,7 @@
             download="STOP_5.pdf"
             class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full"
           >
-            <img src="images/Stop 5.jpg" alt="Hard_Work" class="rounded w-full " />
+            <img src="images/Stop 5.jpg" alt="Hard_Work" class="rounded w-full h-[40vh] lg:h-[52vh]" />
           </a>
         </div>
       </section>
