--- a/6NN.html
+++ b/6NN.html
@@ -20,7 +20,7 @@
           <h1 class="py-3 border-b border-[--btn-text] inline-block">
             Six Non-Negotiables
           </h1>
-          <h1 class="pb-3 pt-3">छह गैर परक्राम्य</h1>
+          <h1 class="pb-3 pt-3">छः गैर परक्राम्य</h1>
         </div>
         <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[80%] h-[80%]">
           <a
