--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body class="h-screen overflow-hidden bg-cover bg-center bg-no-repeat bg-opacity-25" style="background-image: url('images/Logo\ Line.png');" >
+<body class="h-screen overflow-hidden bg-cover bg-center bg-no-repeat bg-opacity-25"  style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(images/Logo\ Line.png);" >
     <div class="h-screen relative overflow-auto" >
         <section class="w-full flex flex-col justify-center items-center gap-6">
           <div class="flex justify-center items-center w-[95%] flex-col lg:relative md:flex-row md:relative lg:flex-row">
@@ -19,7 +19,7 @@
             </h1>
           </div>
           <div class="w-full flex flex-col justify-center items-center">
-            <img src="https://img.freepik.com/premium-photo/man-road-sign-safety-first_869423-1180.jpg?w=740" alt="road Safety" class="max-w-[90%] h-[45vh] p-2 shadow-md shadow-[--bg-color] rounded-lg" />
+            <img src="https://img.freepik.com/premium-photo/man-road-sign-safety-first_869423-1180.jpg?w=740" alt="road Safety" class="max-w-[90%] h-[45vh] shadow-md shadow-[--bg-color] rounded-lg" />
             <div class="flex justify-center flex-col items-center gap-4 w-full mt-12 md:mt-7 md:flex-row lg:w-[63%] md:w-[80%] lg:gap-8 text-center">
               <a href="6NN.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] lg:w-full h-[80px] hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
                 Six Non-Negotiables
