--- a/generalSafety.html
+++ b/generalSafety.html
@@ -9,9 +9,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
-<body class="bg-[--bg-color] h-screen overflow-hidden">
+<body class="h-screen overflow-hidden bg-cover bg-center bg-no-repeat" style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(images/Logo\ Line.png);">
     <div class='h-screen overflow-auto'> 
-        <section class='flex flex-col items-center m-5 gap-y-10 bg-[--blue-color] rounded-lg lg:mx-auto lg:my-6 pb-5 md:pb-24 lg:w-[80%]'>
+        <section class='flex flex-col items-center m-5 gap-y-10 bg-[--blue-color] rounded-lg lg:mx-auto lg:my-6 pb-5 md:pb-24 lg:w-[80%] shadow-md shadow-black'>
             <div class='bg-[--text-color] text-[--btn-text] font-bold text-2xl text-center w-[95%] my-5 rounded-lg lg:text-3xl lg:w-[80%]'>
                 <h1 class='py-3 border-b border-[--btn-text] inline-block'>General Safety Rules</h1>
                 <h1 class='pb-3 pt-3'>व्यक्तिगत सुरक्षा नियम</h1>
