--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body class="h-screen overflow-hidden bg-cover bg-center bg-no-repeat bg-opacity-25"  style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(images/Logo\ Line.png);" >
+<body class="h-screen overflow-hidden bg-cover bg-center bg-no-repeat"  style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(images/Logo\ Line.png);" >
     <div class="h-screen relative overflow-auto" >
         <section class="w-full flex flex-col justify-center items-center gap-6">
           <div class="flex justify-center items-center w-[95%] flex-col lg:relative md:flex-row md:relative lg:flex-row">
