--- a/ppe.html
+++ b/ppe.html
@@ -9,10 +9,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="bg-[--bg-color] h-screen overflow-hidden">
+  <body class="bg-[--bg-color] h-screen overflow-hidden bg-cover bg-center bg-no-repeat" style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(images/Logo\ Line.png);">
     <div class="h-screen overflow-auto">
       <section
-        class="flex flex-col items-center m-5 bg-[--blue-color] rounded-lg lg:mx-auto pb-3 md:pb-5 lg:w-[90%]"
+        class="flex flex-col items-center m-5 bg-[--blue-color] rounded-lg lg:mx-auto pb-3 md:pb-5 lg:w-[90%] shadow-md shadow-black"
       >
         <div
           class="bg-[--text-color] text-[--btn-text] font-bold text-2xl text-center w-[95%] my-5 rounded-lg lg:text-3xl lg:w-[90%]"
@@ -22,7 +22,7 @@
           </h1>
           <h1 class="pb-3 pt-3">व्यक्तिगत सुरक्षा उपकरण</h1>
         </div>
-        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[80%] h-[80%]">
+        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[80%] h-[80%] ">
           <a
             href="pdf/Safety_Instruction.pdf"
             download="Safety_Instruction.pdf"
