--- a/generalSafety.html
+++ b/generalSafety.html
@@ -1,46 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <title>General Safety Rules</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <title>Six Non-Negotiables</title>
     <script src="https://cdn.tailwindcss.com"></script>
+  </head>
 
-</head>
-<body class="h-screen overflow-hidden bg-cover bg-center bg-no-repeat" style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(images/Logo\ Line.png);">
-    <div class='h-screen overflow-auto'> 
-        <section class='flex flex-col items-center m-5 gap-y-10 bg-[--blue-color] rounded-lg lg:mx-auto lg:my-6 pb-5 md:pb-24 lg:w-[80%] shadow-md shadow-black'>
-            <div class='bg-[--text-color] text-[--btn-text] font-bold text-2xl text-center w-[95%] my-5 rounded-lg lg:text-3xl lg:w-[80%]'>
-                <h1 class='py-3 border-b border-[--btn-text] inline-block'>General Safety Rules</h1>
-                <h1 class='pb-3 pt-3'>व्यक्तिगत सुरक्षा नियम</h1>
-            </div>
-            <div class='grid grid-cols-1 gap-4 place-items-center pb-4sm:grid-cols-1 md:grid-cols-2 text-[--btn-text]'>
-                <a href="pdf/Road_Safety.pdf" download="Road_Safety.pdf" class='w-[90%] lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-[95%]'>
-                    <img src='images/general_1.jpg' alt="Hard_Work" class='rounded w-72 h-52' />
-                    <button class='w-full text-center bg-[--text-color] p-1 rounded-sm font-extrabold cursor-pointer hover:bg-[--slate-500] transition duration-300 ease-in-out'>Road Safety</button>
-                </a>
-
-                <a href="pdf/Safety_at_Home.pdf" download="Safety_at_Home.pdf.pdf" class='w-[90%] lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-[95%]'>
-                    <img src='images/general_2.png' alt="Hard_Work" class='rounded w-72 h-52' />
-                    <button class='w-full text-center bg-[--text-color] p-1 rounded-sm font-extrabold cursor-pointer hover:bg-[--slate-500] transition duration-300 ease-in-out'>Safety at Home</button>
-                </a>
-
-            </div>
-        </section>
-        <section class='w-full text-center mb-5 md:mt-24 lg:-mt-1'>
+  <body class="bg-[--bg-color] h-screen overflow-hidden bg-cover bg-center bg-no-repeat" style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(images/Logo\ Line.png);">
+    <div class="h-screen overflow-auto">
+      <section
+        class="flex flex-col items-center m-5 bg-[--blue-color] rounded-lg lg:mx-auto pb-3 md:pb-5 lg:w-[90%] shadow-md shadow-black"
+      >
+        <div
+          class="bg-[--text-color] text-[--btn-text] font-bold text-2xl text-center w-[95%] my-5 rounded-lg lg:text-3xl lg:w-[90%]"
+        >
+          <h1 class="py-3 border-b border-[--btn-text] inline-block">
+            Safety Instructions</h1>
+          </h1>
+          <h1 class="pb-3 pt-3">सुरक्षा  निर्देश</h1>
+        </div>
+        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[80%] h-[80%] ">
+          <a
+            href="pdf/Safety_Instruction.pdf"
+            download="Safety_Instruction.pdf"
+            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full max-h-screen"
+          >
+            <img src="images/For Websit data.JPG" alt="Hard_Work" class="rounded w-full h-[40vh] lg:h-[52vh]" />
+          </a>
+        </div>
+      </section>
+      <section class="w-full text-center mb-[15%] lg:mb-[2%]">
         <a href="home.html">
-        <button class='bg-[--blue-color] p-3 text-[--btn-text] font-medium rounded-2xl px-14 hover:bg-[--skyBlue] hover:text-[--black] hover:font-semibold transition duration-300 ease-in-out lg:px-28 lg:text-lg shadow-sm hover:shadow-[--black]'>Go Back</button>
+          <button
+            class="bg-[--blue-color] p-3 text-[--btn-text] font-medium rounded-2xl px-14 hover:bg-[--skyBlue] hover:text-[--black] hover:font-semibold transition duration-300 ease-in-out lg:px-28 lg:text-lg shadow-sm hover:shadow-[--black]"
+          >
+            Go Back
+          </button>
         </a>
-        
-        </section>
+      </section>
 
-        <section class="lg:absolute lg:bottom-0 w-full bg-[--black] p-4">
-        <footer class="text-center text-sm md:text-lg font-extralight text-[--btn-text]">
+      <section class="absolute bottom-0 w-full bg-[--black] p-4">
+        <footer
+          class="text-center text-sm md:text-lg font-extralight text-[--btn-text]"
+        >
           Copyright © 2024. All rights reserved.
         </footer>
       </section>
     </div>
-</body>
+  </body>
 </html>
