--- a/home.html
+++ b/home.html
@@ -13,9 +13,9 @@
     <div class="h-screen relative overflow-auto" >
         <section class="w-full flex flex-col justify-center items-center gap-6">
           <div class="flex justify-center items-center w-[95%] flex-col lg:relative md:flex-row md:relative lg:flex-row">
-            <img src="images/Logo.png" alt="Logo" class="h-10 w-10 lg:absolute lg:left-0 md:absolute md:left-0 lg:h-16 lg:w-16 lg:border-none md:border-none mt-2 lg:mt-0 md:mt-0">
+            <img src="images/Logo.png" alt="Logo" class="h-10 w-10 lg:absolute lg:left-0 md:absolute md:left-0 lg:h-14 lg:w-14 lg:border-none md:border-none mt-2 lg:mt-0 md:mt-0">
             <h1 class="my-6 mb-3 text-center font-bold text-3xl  text-[--blue-color] md:text-[2.3rem] lg:text-[2.9rem] py-3">
-              QR Code CES-DEL
+              CES-DEL
             </h1>
           </div>
           <div class="w-full flex flex-col justify-center items-center">
@@ -33,11 +33,11 @@
             <div class="flex justify-center flex-col items-center gap-4 w-full mt-4 mb-4 md:flex-row lg:w-[63%] md:w-[80%] lg:gap-8 text-center">
 
               <a href="ppe.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] h-[80px] lg:w-full hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
-                Madaitotry PPEs for Shop Floor
+                Mandatiory PPEs for Shop Floor
               </a>
               
               <a href="generalSafety.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] h-[80px] lg:w-full hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
-                Subcontractor Safety Rule
+                Safety Instructions
               </a>
             </div>
 
