--- a/ppe.html
+++ b/ppe.html
@@ -18,17 +18,17 @@
           class="bg-[--text-color] text-[--btn-text] font-bold text-2xl text-center w-[95%] my-5 rounded-lg lg:text-3xl lg:w-[90%]"
         >
           <h1 class="py-3 border-b border-[--btn-text] inline-block">
-            Madaitotry PPEs for Shop Floor</h1>
+            Mandatory PPEs for Shop Floor</h1>
           </h1>
           <h1 class="pb-3 pt-3">व्यक्तिगत सुरक्षा उपकरण</h1>
         </div>
-        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[80%] h-[80%] ">
+        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[50%] md:w-[50%] h-[80%] ">
           <a
-            href="pdf/Safety_Instruction.pdf"
-            download="Safety_Instruction.pdf"
-            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full max-h-screen"
+            href="pdf/2.pdf"
+            download="2.pdf"
+            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full max-h-screen lg:w-[50%]"
           >
-            <img src="images/For Websit data.JPG" alt="Hard_Work" class="rounded w-full h-[40vh] lg:h-[52vh]" />
+            <img src="images/2.jpg" alt="Hard_Work" class="rounded w-full h-[40vh] lg:h-[52vh]" />
           </a>
         </div>
       </section>
