--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
             <div class="flex justify-center flex-col items-center gap-4 w-full mt-4 mb-4 md:flex-row lg:w-[63%] md:w-[80%] lg:gap-8 text-center">
 
               <a href="ppe.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] h-[80px] lg:w-full hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
-                Mandatiory PPEs for Shop Floor
+                Mandatory PPEs for Shop Floor
               </a>
               
               <a href="generalSafety.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] h-[80px] lg:w-full hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
