--- a/stop5.html
+++ b/stop5.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <title>Six Non-Negotiables</title>
+    <title>STOP_5</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
