--- a/ppe.html
+++ b/ppe.html
@@ -22,13 +22,13 @@
           </h1>
           <h1 class="pb-3 pt-3">व्यक्तिगत सुरक्षा उपकरण</h1>
         </div>
-        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[50%] md:w-[80%] h-[80%] ">
+        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[50%] md:w-[80%]">
           <a
-            href="pdf/PPE.pdf"
-            download="PPE.pdf"
-            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full max-h-screen lg:w-[80%]"
+            href="pdf/2.pdf"
+            download="2.pdf"
+            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out max-h-screen"
           >
-            <img src="images/PPE.jpg" alt="Hard_Work" class="rounded w-full h-[40vh] lg:h-[52vh]" />
+            <img src="images/2.jpg" alt="Hard_Work" class="rounded w-full h-[40vh] lg:h-[52vh]" />
           </a>
         </div>
       </section>
