--- a/home_hindi.html
+++ b/home_hindi.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>PO_CES-DEL</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -22,19 +22,19 @@
           <div class="w-full flex flex-col justify-center items-center">
             <img src="images/home.jpg" alt="road Safety" class="max-w-[90%] h-[45vh] shadow-md shadow-[--bg-color] rounded-lg" />
             <div class="flex justify-center flex-col items-center gap-4 w-full mt-12 md:mt-7 md:flex-row lg:w-[63%] md:w-[80%] lg:gap-8 text-center">
-              <a href="6NN_Eng.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] lg:w-full h-[80px] hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
-                Six Non-Negotiables
+              <a href="6NN.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] lg:w-full h-[80px] hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
+                छः गैर परक्राम्य
               </a>
   
-              <a href="Stop_5_Eng.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] h-[80px] lg:w-full hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
-                STOP 5
+              <a href="stop5.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] h-[80px] lg:w-full hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
+                स्टॉप-5
               </a>
             </div>
 
-            <div class="flex justify-center flex-col items-center gap-4 w-full mt-4 mb-4 md:flex-row lg:w-[63%] md:w-[80%] lg:gap-8 text-center">
+            <div class="flex justify-center flex-col items-center gap-4 w-full mt-4 mb-2 md:flex-row lg:w-[63%] md:w-[80%] lg:gap-8 text-center">
 
-              <a href="ppe_Eng.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] h-[80px] lg:w-full hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
-                Mandatory PPEs for Shop Floor
+              <a href="ppe.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] h-[80px] lg:w-full hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
+                व्यक्तिगत सुरक्षा उपकरण
               </a>
             </div>
 
@@ -42,7 +42,7 @@
 
           <div class="flex lg:justify-start lg:left-5 lg:absolute lg:bottom-16">
             <div class="rounded-full p-4 mb-2 bg-[--blue-color] text-white hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black]">
-              <a href="language.html" class="material-symbols-outlined font-extralight">arrow_back</a>
+              <a href="language.html" class="material-symbols-outlined">arrow_back</a>
             </div>
           </div>
         </section>
