--- a/6NN_Eng.html
+++ b/6NN_Eng.html
@@ -5,34 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <title>Safety_Instructions</title>
+    <title>Six Non-Negotiables</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="bg-[--bg-color] h-screen overflow-hidden bg-cover bg-center bg-no-repeat" style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(images/Logo\ Line.png);">
+  <body class="h-screen overflow-hidden bg-cover bg-center bg-no-repeat" style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(images/Logo\ Line.png);">
     <div class="h-screen overflow-auto">
       <section
         class="flex flex-col items-center m-5 bg-[--blue-color] rounded-lg lg:mx-auto pb-3 md:pb-5 lg:w-[90%] shadow-md shadow-black"
       >
         <div
-          class="bg-[--text-color] text-[--btn-text] font-bold text-2xl text-center w-[95%] my-5 rounded-lg lg:text-3xl lg:w-[90%]"
+          class="bg-[--text-color] text-[--btn-text] font-bold text-2xl text-center w-[95%] my-5 rounded-lg lg:text-3xl lg:w-[90%] py-2"
         >
           <h1 class="py-3 border-b border-[--btn-text] inline-block">
-            Safety Instructions</h1>
+            Six Non-Negotiables
           </h1>
-          <h1 class="pb-3 pt-3">सुरक्षा  निर्देश</h1>
         </div>
-        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[80%] h-[80%] ">
+        <div class="grid place-items-center text-[--btn-text] w-full lg:w-[80%]">
           <a
-            href="pdf/Safety_Instruction.pdf"
-            download="Safety_Instruction.pdf"
-            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full max-h-screen"
+            href="pdf/ENGLISH 6NN Poster-A4.pdf"
+            download="ENGLISH 6NN Poster-A4.pdf"
+            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out w-[85%] md:w-[60%] lg:w-[55%] max-h-screen"
           >
-            <img src="images/For Websit data.JPG" alt="Hard_Work" class="rounded w-full h-[40vh] lg:h-[52vh]" />
+            <img src="images/ENGLISH 6NN Poster-A4-images-1.jpg" alt="Hard_Work" class="rounded w-full h-[30vh] lg:h-[58vh]" />
           </a>
         </div>
       </section>
-      <section class="w-full text-center mb-[15%] lg:mb-[2%]">
+      <section class="w-full text-center md:mb-[10%] lg:mb-[5%]">
         <a href="home.html">
           <button
             class="bg-[--blue-color] p-3 text-[--btn-text] font-medium rounded-2xl px-14 hover:bg-[--skyBlue] hover:text-[--black] hover:font-semibold transition duration-300 ease-in-out lg:px-28 lg:text-lg shadow-sm hover:shadow-[--black]"
