--- a/ppe.html
+++ b/ppe.html
@@ -15,12 +15,10 @@
         class="flex flex-col items-center m-5 bg-[--blue-color] rounded-lg lg:mx-auto pb-3 md:pb-5 lg:w-[90%] shadow-md shadow-black"
       >
         <div
-          class="bg-[--text-color] text-[--btn-text] font-bold text-2xl text-center w-[95%] my-5 rounded-lg lg:text-3xl lg:w-[90%]"
+          class="bg-[--text-color] text-[--btn-text] font-bold text-2xl text-center w-[95%] my-5 rounded-lg lg:text-3xl lg:w-[90%] p-2"
         >
-          <h1 class="py-3 border-b border-[--btn-text] inline-block">
-            Mandatory PPEs for Shop Floor</h1>
           </h1>
-          <h1 class="pb-3 pt-3">व्यक्तिगत सुरक्षा उपकरण</h1>
+          <h1 class="py-3 border-b border-[--btn-text] inline-block">व्यक्तिगत सुरक्षा उपकरण</h1>
         </div>
         <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[50%] md:w-[80%]">
           <a
@@ -34,7 +32,7 @@
         </div>
       </section>
       <section class="w-full text-center mb-[15%] lg:mb-[2%]">
-        <a href="home.html">
+        <a href="home_hindi.html">
           <button
             class="bg-[--blue-color] p-3 text-[--btn-text] font-medium rounded-2xl px-14 hover:bg-[--skyBlue] hover:text-[--black] hover:font-semibold transition duration-300 ease-in-out lg:px-28 lg:text-lg shadow-sm hover:shadow-[--black]"
           >
