--- a/stop5.html
+++ b/stop5.html
@@ -30,7 +30,7 @@
         </div>
       </section>
       <section class="w-full text-center mb-[15%] lg:mb-[5%]">
-        <a href="home_hindi.html">
+        <a href="hindi.html">
           <button
             class="bg-[--blue-color] p-3 text-[--btn-text] font-medium rounded-2xl px-14 hover:bg-[--skyBlue] hover:text-[--black] hover:font-semibold transition duration-300 ease-in-out lg:px-28 lg:text-lg shadow-sm hover:shadow-[--black]"
           >
