--- a/6NN_Eng.html
+++ b/6NN_Eng.html
@@ -32,7 +32,7 @@
         </div>
       </section>
       <section class="w-full text-center md:mb-[10%] lg:mb-[5%]">
-        <a href="home.html">
+        <a href="english.html">
           <button
             class="bg-[--blue-color] p-3 text-[--btn-text] font-medium rounded-2xl px-14 hover:bg-[--skyBlue] hover:text-[--black] hover:font-semibold transition duration-300 ease-in-out lg:px-28 lg:text-lg shadow-sm hover:shadow-[--black]"
           >
