--- a/hindi.html
+++ b/hindi.html
@@ -42,7 +42,7 @@
 
           <div class="flex lg:justify-start lg:left-5 lg:absolute lg:bottom-16">
             <div class="rounded-full p-4 mb-2 bg-[--blue-color] text-white hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black]">
-              <a href="language.html" class="material-symbols-outlined">arrow_back</a>
+              <a href="home.html" class="material-symbols-outlined">arrow_back</a>
             </div>
           </div>
         </section>
