--- a/home.html
+++ b/home.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>PO_CES-DEL</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
 
@@ -21,28 +20,14 @@
           </div>
           <div class="w-full flex flex-col justify-center items-center">
             <img src="images/home.jpg" alt="road Safety" class="max-w-[90%] h-[45vh] shadow-md shadow-[--bg-color] rounded-lg" />
-            <div class="flex justify-center flex-col items-center gap-4 w-full mt-12 md:mt-7 md:flex-row lg:w-[63%] md:w-[80%] lg:gap-8 text-center">
-              <a href="6NN_Eng.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] lg:w-full h-[80px] hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
-                Six Non-Negotiables
+            <div class="flex justify-center flex-col items-center gap-4 w-full mt-12 md:mt-7 md:flex-row lg:w-[63%] md:w-[80%] lg:gap-8 text-center lg:mt-16">
+              <a href="english.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] lg:w-full h-[80px] hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
+                English
               </a>
   
-              <a href="Stop_5_Eng.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] h-[80px] lg:w-full hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
-                STOP 5
+              <a href="hindi.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] h-[80px] lg:w-full hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
+                हिन्दी 
               </a>
-            </div>
-
-            <div class="flex justify-center flex-col items-center gap-4 w-full mt-4 mb-4 md:flex-row lg:w-[63%] md:w-[80%] lg:gap-8 text-center">
-
-              <a href="ppe_Eng.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] h-[80px] lg:w-full hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
-                Mandatory PPEs for Shop Floor
-              </a>
-            </div>
-
-          </div>
-
-          <div class="flex lg:justify-start lg:left-5 lg:absolute lg:bottom-16">
-            <div class="rounded-full p-4 mb-2 bg-[--blue-color] text-white hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black]">
-              <a href="language.html" class="material-symbols-outlined font-extralight">arrow_back</a>
             </div>
           </div>
         </section>
