--- a/6NN_Eng.html
+++ b/6NN_Eng.html
@@ -15,19 +15,17 @@
         class="flex flex-col items-center m-5 bg-[--blue-color] rounded-lg lg:mx-auto pb-3 md:pb-5 lg:w-[90%] shadow-md shadow-black"
       >
         <div
-          class="bg-[--text-color] text-[--btn-text] font-bold text-2xl text-center w-[95%] my-5 rounded-lg lg:text-3xl lg:w-[90%] py-2"
+          class="bg-[--text-color] text-[--btn-text] font-bold text-2xl text-center w-[95%] my-5 rounded-lg lg:text-3xl lg:w-[90%] p-2"
         >
-          <h1 class="py-3 border-b border-[--btn-text] inline-block">
-            Six Non-Negotiables
-          </h1>
+          <h1 class="py-3 border-b border-[--btn-text] inline-block">6 Non-Negotiables</h1>
         </div>
-        <div class="grid place-items-center text-[--btn-text] w-full lg:w-[80%]">
+        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[80%] h-[80%]">
           <a
             href="pdf/ENGLISH 6NN Poster-A4.pdf"
             download="ENGLISH 6NN Poster-A4.pdf"
-            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out w-[85%] md:w-[60%] lg:w-[55%] max-h-screen"
+            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full max-h-screen"
           >
-            <img src="images/ENGLISH 6NN Poster-A4-images-1.jpg" alt="Hard_Work" class="rounded w-full h-[30vh] lg:h-[58vh]" />
+            <img src="images/6nn_English.jpg" alt="Hard_Work" class="rounded w-full h-[30vh] lg:h-[52vh]" />
           </a>
         </div>
       </section>
