--- a/hindi.html
+++ b/hindi.html
@@ -47,7 +47,7 @@
           </div>
         </section>
   
-        <section class="lg:absolute md:absolute md:bottom-0 lg:bottom-0 w-full bg-[--black] p-4">
+        <section class="lg:absolute lg:bottom-0 w-full bg-[--black] p-4">
           <footer class="text-center text-[--btn-text] text-sm md:text-lg font-extralight">
             Copyright © 2024. All rights reserved.
           </footer>
