--- a/hindi.html
+++ b/hindi.html
@@ -41,8 +41,8 @@
           </div>
 
           <div class="flex lg:justify-start lg:left-5 lg:absolute lg:bottom-16">
-            <div class="rounded-full p-4 mb-2 bg-[--blue-color] text-white hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black]">
-              <a href="home.html" class="material-symbols-outlined">arrow_back</a>
+            <div class="rounded-full p-4 mb-2 bg-[--blue-color] text-white hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] w-12 h-12 lg:w-14 lg:h-14 flex justify-center items-center">
+              <a href="home.html" class="material-symbols-outlined font-semibold">arrow_back</a>
             </div>
           </div>
         </section>
