--- a/ppe.html
+++ b/ppe.html
@@ -20,14 +20,14 @@
           </h1>
           <h1 class="py-3 border-b border-[--btn-text] inline-block">व्यक्तिगत सुरक्षा उपकरण</h1>
         </div>
-        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[50%] md:w-[80%]">
+        <div class="grid place-items-center text-[--btn-text] w-[90%] md:w-[45%] lg:w-[35%]">
           <a
-            href="pdf/2.pdf"
+            href="pdf/PPEs.pdf"
             
-            download="2.pdf"
-            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out max-h-screen"
+            download="PPEs.pdf"
+            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out max-h-screen w-[80%]"
           >
-            <img src="images/2.jpg" alt="Hard_Work" class="rounded w-full h-[40vh] lg:h-[52vh]" />
+            <img src="images/PPEs.jpeg" alt="Hard_Work" class="rounded w-full h-[40vh] lg:h-[55vh]" />
           </a>
         </div>
       </section>
