--- a/stop5.html
+++ b/stop5.html
@@ -9,8 +9,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="bg-[--bg-color] h-screen overflow-hidden bg-cover bg-center bg-no-repeat" style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(images/Logo\ Line.png);">
-    <div class="h-screen overflow-auto">
+  <body>
+    <div class="flex gap-10 justify-between flex-col min-h-screen">
       <section
         class="flex flex-col items-center m-5 bg-[--blue-color] rounded-lg lg:mx-auto pb-3 md:pb-5 lg:w-[90%] shadow-md shadow-black"
       >
@@ -21,8 +21,8 @@
         </div>
         <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[60%]">
           <a
-            href="pdf/STOP_5.pdf"
-            download="STOP_5.pdf"
+            href="pdf/Stop-5_Hindi.pdf"
+            download="Stop-5_Hindi.pdf"
             class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full"
           >
             <img src="images/Stop 5_hindi.jpg" alt="Hard_Work" class="rounded w-full h-[40vh] lg:h-[52vh]" />
@@ -39,7 +39,7 @@
         </a>
       </section>
 
-      <section class="absolute bottom-0 w-full bg-[--black] p-4">
+      <section class="bg-[--black] p-4">
         <footer
           class="text-center text-sm md:text-lg font-extralight text-[--btn-text]"
         >
