--- a/home.html
+++ b/home.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body class="h-screen overflow-hidden bg-cover bg-center bg-no-repeat"  style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(images/Logo\ Line.png);" >
-    <div class="h-screen relative overflow-auto" >
-        <section class="w-full flex flex-col justify-center items-center gap-6">
+<body>
+    <div class="flex gap-10 justify-between flex-col min-h-screen">
+        <section class="w-full flex flex-col justify-center items-center gap-6 mt-5">
           <div class="flex justify-center items-center w-[95%] flex-col lg:relative md:flex-row md:relative lg:flex-row">
-            <img src="images/Logo.png" alt="Logo" class="h-10 w-13 lg:absolute lg:left-0 md:absolute md:left-0 lg:h-[3rem] lg:w-[3.79rem] mt-2 lg:mt-0 md:mt-0">
+            <img src="images/Logo.png" alt="Logo" class=" h-[2.5rem] lg:absolute lg:left-0 md:absolute md:left-0  mt-2 lg:mt-0 md:mt-0">
             <h1 class="my-6 mb-3 text-center font-bold text-3xl  text-[--blue-color] md:text-[2.3rem] lg:text-[2.9rem] py-3">
               CES-DEL
             </h1>
           </div>
           <div class="w-full flex flex-col justify-center items-center">
-            <img src="images/home.jpg" alt="road Safety" class="max-w-[90%] h-[45vh] shadow-md shadow-[--bg-color] rounded-lg" />
+            <img src="images/home.jpg" alt="road Safety" class="min-h-[15rem] max-h-[25rem]" />
             <div class="flex justify-center flex-col items-center gap-4 w-full mt-12 md:mt-7 md:flex-row lg:w-[63%] md:w-[80%] lg:gap-8 text-center lg:mt-16">
               <a href="english.html" class="bg-[--blue-color] text-[--btn-text] font-semibold rounded-xl px-2 py-3 w-[75%] lg:w-full h-[80px] hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] lg:py-5 lg:text-xl grid place-items-center md:text-lg">
                 English
@@ -32,7 +32,7 @@
           </div>
         </section>
   
-        <section class="lg:absolute md:absolute md:bottom-0 lg:bottom-0 w-full bg-[--black] p-4">
+        <section class="bg-[--black] p-4">
           <footer class="text-center text-[--btn-text] text-sm md:text-lg font-extralight">
             Copyright © 2024. All rights reserved.
           </footer>
