--- a/ppe.html
+++ b/ppe.html
@@ -9,8 +9,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="bg-[--bg-color] h-screen overflow-hidden bg-cover bg-center bg-no-repeat" style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(images/Logo\ Line.png);">
-    <div class="h-screen overflow-auto">
+  <body>
+    <div class="flex gap-10 justify-between flex-col min-h-screen">
       <section
         class="flex flex-col items-center m-5 bg-[--blue-color] rounded-lg lg:mx-auto pb-3 md:pb-5 lg:w-[90%] shadow-md shadow-black"
       >
@@ -41,7 +41,7 @@
         </a>
       </section>
 
-      <section class="absolute bottom-0 w-full bg-[--black] p-4">
+      <section class="bg-[--black] p-4">
         <footer
           class="text-center text-sm md:text-lg font-extralight text-[--btn-text]"
         >
