--- a/6NN.html
+++ b/6NN.html
@@ -25,7 +25,7 @@
             download="6NN_hindi.pdf"
             class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full max-h-screen"
           >
-            <img src="images/6nn.jpg" alt="Hard_Work" class="rounded w-full h-[30vh] lg:h-[52vh]" />
+            <img src="images/6nn.jpg" alt="Hard_Work" class="h-full" />
           </a>
         </div>
       </section>
