--- a/ppe.html
+++ b/ppe.html
@@ -27,7 +27,7 @@
             download="PPEs.pdf"
             class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out max-h-screen w-[80%]"
           >
-            <img src="images/PPEs.jpeg" alt="Hard_Work" class="rounded w-full h-[40vh] lg:h-[55vh]" />
+            <img src="images/PPEs.jpeg" alt="Hard_Work" class="h-full" />
           </a>
         </div>
       </section>
