--- a/home.html
+++ b/home.html
@@ -12,8 +12,8 @@
 <body>
     <div class="flex gap-10 justify-between flex-col min-h-screen">
         <section class="w-full flex flex-col justify-center items-center gap-6 mt-5">
-          <div class="flex justify-center items-center w-[95%] flex-col lg:relative md:flex-row md:relative lg:flex-row">
-            <img src="images/Logo.png" alt="Logo" class=" h-[2.5rem] lg:absolute lg:left-0 md:absolute md:left-0  mt-2 lg:mt-0 md:mt-0">
+          <div class="flex justify-center items-center w-[95%] flex-col md:flex-row md:relative lg:flex-row">
+            <img src="images/Logo.png" alt="Logo" class="h-[2.5rem] lg:absolute lg:left-0 md:absolute md:left-0  mt-2 lg:mt-0 md:mt-0">
             <h1 class="my-6 mb-3 text-center font-bold text-3xl  text-[--blue-color] md:text-[2.3rem] lg:text-[2.9rem] py-3">
               CES-DEL
             </h1>
