--- a/stop5.html
+++ b/stop5.html
@@ -25,7 +25,7 @@
             download="Stop-5_Hindi.pdf"
             class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full"
           >
-            <img src="images/Stop 5_hindi.jpg" alt="Hard_Work" class="rounded w-full h-[40vh] lg:h-[52vh]" />
+            <img src="images/Stop 5_hindi.jpg" alt="Hard_Work" class="h-full" />
           </a>
         </div>
       </section>
