--- a/6NN.html
+++ b/6NN.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body>
+  <body class="bg-white">
     <div class="flex gap-10 justify-between flex-col min-h-screen">
       <section
         class="flex flex-col items-center m-5 bg-[--blue-color] rounded-lg lg:mx-auto pb-3 md:pb-5 lg:w-[90%] shadow-md shadow-black"
@@ -19,13 +19,13 @@
         >
           <h1 class="py-3 border-b border-[--btn-text] inline-block">छः गैर परक्राम्य</h1>
         </div>
-        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[80%] h-[80%]">
+        <div class="grid place-items-center text-[--btn-text] w-[90%]  lg:w-[50%] 2xl:w-[30%]">
           <a
             href="pdf/6NN_hindi.pdf"
             download="6NN_hindi.pdf"
-            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full max-h-screen"
+            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full "
           >
-            <img src="images/6nn.jpg" alt="Hard_Work" class="h-full" />
+            <img src="images/6nn_hindi.png" alt="6NN" class="h-full" />
           </a>
         </div>
       </section>
