--- a/Stop_5_Eng.html
+++ b/Stop_5_Eng.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body>
+  <body class="bg-white">
     <div class="flex gap-10 justify-between flex-col min-h-screen">
       <section
         class="flex flex-col items-center m-5 bg-[--blue-color] rounded-lg lg:mx-auto pb-3 md:pb-5 lg:w-[90%] shadow-md shadow-black"
@@ -19,13 +19,13 @@
         >
           <h1 class="pb-3 pt-3">STOP-5</h1>
         </div>
-        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[60%]">
+        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[60%] 2xl:w-[40%]">
           <a
             href="pdf/Stop-5_Eng.pdf"
             download="Stop-5_Eng.pdf"
             class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out md:w-full"
           >
-            <img src="images/STOP 5_English.jpg" alt="Hard_Work" class="h-full" />
+            <img src="images/Stop-5_English.png" alt="Stop-5" class="h-full" />
           </a>
         </div>
       </section>
