--- a/ppe_Eng.html
+++ b/ppe_Eng.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body>
+  <body class="bg-white">
     <div class="flex gap-10 justify-between flex-col min-h-screen">
       <section
         class="flex flex-col items-center m-5 bg-[--blue-color] rounded-lg lg:mx-auto pb-3 md:pb-5 lg:w-[90%] shadow-md shadow-black"
@@ -21,14 +21,14 @@
             Mandatory PPEs for Shop Floor</h1>
           </h1>
         </div>
-        <div class="grid place-items-center text-[--btn-text] w-[90%] md:w-[45%] lg:w-[35%]">
+        <div class="grid place-items-center text-[--btn-text] w-[90%] lg:w-[80%] 2xl:w-[50%]">
           <a
             href="pdf/PPEs.pdf"
             
             download="PPEs.pdf"
-            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out max-h-screen w-[80%]"
+            class="lg:bg-[--bg-color] border-2 p-1 rounded transform hover:scale-105 transition duration-300 ease-in-out max-h-screen"
           >
-            <img src="images/PPEs.jpeg" alt="Hard_Work" class="h-full" />
+            <img src="images/PPE.png" alt="PPE" class="h-full" />
           </a>
         </div>
       </section>
