--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
+<body class="bg-white">
     <div class="flex gap-10 justify-between flex-col min-h-screen">
         <section class="w-full flex flex-col justify-center items-center gap-6 mt-5">
           <div class="flex justify-center items-center w-[95%] flex-col md:flex-row md:relative lg:flex-row">
