--- a/english.html
+++ b/english.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bg-white">
     <div class="flex gap-10 justify-between flex-col min-h-screen">
-        <section class="w-full flex flex-col justify-center items-center gap-6">
+        <section class="w-full flex flex-col justify-center items-center gap-6 lg:relative">
           <div class="flex justify-center items-center w-[95%] flex-col lg:relative md:flex-row md:relative lg:flex-row">
             <img src="images/Logo.png" alt="Logo" class="h-[2.5rem] lg:absolute lg:left-0 md:absolute md:left-0  mt-2 lg:mt-0 md:mt-0">
             <h1 class="my-6 mb-3 text-center font-bold text-3xl  text-[--blue-color] md:text-[2.3rem] lg:text-[2.9rem] py-3">
@@ -40,7 +40,7 @@
 
           </div>
 
-          <div class="flex lg:justify-start lg:left-5 lg:absolute lg:bottom-0">
+          <div class="lg:left-5 lg:absolute lg:bottom-0">
             <a href="home.html" class="rounded-full p-4 mb-2 bg-[--blue-color] text-white hover:text-[--blue-color] hover:bg-[--skyBlue] border hover:border-[--black] transition duration-300 ease-in-out shadow-sm hover:shadow-[--black] w-12 h-12 lg:w-14 lg:h-14 flex justify-center items-center">
               <p  class="material-symbols-outlined font-semibold">arrow_back</p>
             </a>
